--- a/index.html
+++ b/index.html
@@ -2,14 +2,120 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SheCodes Plus</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Weather</title>
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/4832ebc8e1.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="src/style.css">
+
 </head>
 
 <body>
-    <h1>Hosting</h1>
+
+  <form>
+    <div class="row">
+      <div class="col-9">
+        <input type="text" placeholder="search your city" class="form-control" id="newCity" />
+      </div>
+      <div class="col-3">
+        <input type="submit" value="search" class="btn btn-primary mb-3" />
+      </div>
+    </div>
+    <div class="btn-current">
+      <input type="submit" value="current" class="btn btn-primary mb-3" />
+    </div>
+  </form>
+
+  <div class="row weather">
+    <div class="col-2" id="currentIcon">
+      <img src="img/clear.png" alt="Sunny" class="main-img">
+    </div>
+    <div class="col">
+      <div class="temp">
+        <span class="temperatur" id="temperature">
+          20</span>
+        <span class="scale">
+          <a href="" class="celsius">°C</a>
+          |<a href="" class="fahrenheit" id="fahrenheit">°F</a>
+        </span>
+      </div>
+      <div class="climate">
+        <div id="currentCondition">
+          Fair
+        </div>
+        <div id="humidity">
+          Humidity: 52%
+        </div>
+        <div id="wind">
+          Wind: 8m/s
+        </div>
+
+      </div>
+    </div>
+    <div class="col city">
+      <h1>
+        <div id="currentCity">
+          Buenos Aires
+        </div>
+        <div class="weekday">
+          Saturday
+        </div>
+      </h1>
+    </div>
+  </div>
+
+  <div class="row forecast">
+    <div class="col">
+      Sunday
+      <br />
+      <img src="img/clear.png" alt="Sunny">
+      <div class="temperature">
+        26° <span class="light">18°</span>
+      </div>
+    </div>
+    <div class="col">
+      Monday
+      <br />
+      <img src="img/clouds.png" alt="Cloudy">
+      <div class="temperature">
+        26° <span class="light">18°</span>
+      </div>
+    </div>
+    <div class="col">
+      Tuesday
+      <br />
+      <img src="img/clear.png" alt="Sunny">
+      <div class="temperature">
+        26° <span class="light">18°</span>
+      </div>
+    </div>
+    <div class="col">
+      Wednesday
+      <br />
+      <img src="img/cloudy.png" alt="Overcast">
+      <div class="temperature">
+        26° <span class="light">18°</span>
+      </div>
+    </div>
+    <div class="col">
+      Thursday
+      <br />
+      <img src="img/cloudy.png" alt="Overcast">
+      <div class="temperature">
+        26° <span class="light">18°</span>
+      </div>
+    </div>
+  </div>
+  <script src="src/js.js"></script>
 </body>
 
 </html>
