--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
     </div>
   </div>
   <div class="github-link">
-    <a href="https://github.com/daryavolnaya/weather-app" target="_blank" class="github-link">My GitHub</a>
+    <a href="https://github.com/daryavolnaya/weather-app" target="_blank" class="github-link">Open-source code</a>by
+    Daria Romaniuk
   </div>
   <script src="src/js.js"></script>
 </body>
