--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
   <div class="body">
     <form>
       <div class="row">
-        <div class="col-9">
-          <input type="text" placeholder="search your city" class="form-control" id="newCity" />
+        <div class="col-6">
+          <input type="text" placeholder="search your city" class="form-control newCity" id="newCity" />
         </div>
         <div class="col-3">
           <input type="submit" value="search" class="btn btn-primary mb-3" />
         </div>
+        <div class="col-3 btn-current">
+          <input type="submit" value="current" class="btn btn-primary mb-3" />
+        </div>
       </div>
-      <div class="btn-current">
-        <input type="submit" value="current" class="btn btn-primary mb-3" />
-      </div>
+
     </form>
 
     <div class="row weather">
@@ -48,18 +49,18 @@
             |<a href="" class="fahrenheit" id="fahrenheit">°F</a>
           </span>
         </div>
-        <div class="climate">
-          <div id="currentCondition">
+        <ul class="climate">
+          <li id="currentCondition">
             Fair
-          </div>
-          <div id="humidity">
-            Humidity: 52%
-          </div>
-          <div id="wind">
-            Wind: 8m/s
-          </div>
+          </li>
+          <li>
+            Humidity: <span id="humidity">52</span>%
+          </li>
+          <li>
+            Wind: <span id="wind">8</span>m/s
+          </li>
 
-        </div>
+        </ul>
       </div>
       <div class="col city">
         <h1>
