--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather</title>
-  <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +14,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/4832ebc8e1.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   <link rel="stylesheet" href="src/style.css">
 
 </head>
@@ -43,10 +43,9 @@
       <div class="col">
         <div class="temp">
           <span class="temperatur" id="temperature">
-            20</span>
+          </span>
           <span class="scale">
-            <a href="" class="celsius">°C</a>
-            |<a href="" class="fahrenheit" id="fahrenheit">°F</a>
+            <a href="#" class="celsius active">°C</a>|<a href="#" class="fahrenheit" id="fahrenheit">°F</a>
           </span>
         </div>
         <ul class="climate">
