--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="col">
         Wednesday
         <br />
-        <img src="img/cloudy.png" alt="Overcast">
+        <img src="img/dust.png" alt="Dust">
         <div class="temperature">
           26° <span class="light">18°</span>
         </div>
@@ -109,7 +109,7 @@
       <div class="col">
         Thursday
         <br />
-        <img src="img/cloudy.png" alt="Overcast">
+        <img src="img/thunderstorm.png" alt="thunderstorm">
         <div class="temperature">
           26° <span class="light">18°</span>
         </div>
