Updated the forecast (HTML/JS)

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       <div class="col">
         <div class="temp">
-          <span class="temperatur" id="temperature">
+          <span id="temperature">
           </span>
           <span class="scale">
             <a href="#" class="celsius active">°C</a>|<a href="#" class="fahrenheit" id="fahrenheit">°F</a>
@@ -73,47 +73,8 @@
       </div>
     </div>
 
-    <div class="row forecast">
-      <div class="col">
-        Sunday
-        <br />
-        <img src="img/clear.png" alt="Sunny">
-        <div class="temperature">
-          26° <span class="light">18°</span>
-        </div>
-      </div>
-      <div class="col">
-        Monday
-        <br />
-        <img src="img/clouds.png" alt="Cloudy">
-        <div class="temperature">
-          26° <span class="light">18°</span>
-        </div>
-      </div>
-      <div class="col">
-        Tuesday
-        <br />
-        <img src="img/clear.png" alt="Sunny">
-        <div class="temperature">
-          26° <span class="light">18°</span>
-        </div>
-      </div>
-      <div class="col">
-        Wednesday
-        <br />
-        <img src="img/dust.png" alt="Dust">
-        <div class="temperature">
-          26° <span class="light">18°</span>
-        </div>
-      </div>
-      <div class="col">
-        Thursday
-        <br />
-        <img src="img/thunderstorm.png" alt="thunderstorm">
-        <div class="temperature">
-          26° <span class="light">18°</span>
-        </div>
-      </div>
+    <div class="forecast" id="forecast">
+
     </div>
   </div>
   <div class="github-link">
