Added conversion to fahrenheit for the forecast

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         <img src="img/clear.png" alt="Sunny" class="main-img">
       </div>
       <div class="col">
-        <div class="temp">
+        <div class="temp bright">
           <span id="temperature">
           </span>
           <span class="scale">
             <a href="#" class="celsius active">°C</a>|<a href="#" class="fahrenheit" id="fahrenheit">°F</a>
           </span>
         </div>
-        <ul class="climate">
+        <ul class="climate bright">
           <li id="currentCondition">
             Fair
           </li>
@@ -63,7 +63,7 @@
       </div>
       <div class="col city">
         <h1>
-          <div id="currentCity">
+          <div class="bright" id="currentCity">
             Buenos Aires
           </div>
           <div class="weekday">
