Added the item feels like celsius

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
               Fair
             </li>
             <li>
+              Feels like <span id="feels-like"></span>°C
+            </li>
+            <li>
               Humidity: <span id="humidity">52</span>%
             </li>
             <li>
